# Kokoro

./: .clang-format  .gitmodules  CMakeLists.txt  README.md
Components/: CMakeLists.txt
Components/Config/: CMakeLists.txt
Components/Config/include/Kokoro/: Config.hh
Components/Config/include/Kokoro/Config/: Platform.hh
Components/EventPipeline/: CMakeLists.txt
Components/EventPipeline/include/Kokoro/: EventPipeline.hh
Components/EventPipeline/include/Kokoro/EventPipeline/: BaseEvent.hh  EventPipeline.hh
Components/EventPipeline/tests/: EventPipeline.cc
Components/Exception/: CMakeLists.txt
Components/Exception/include/Kokoro/: Exception.hh
Components/Exception/include/Kokoro/Exception/: BaseException.hh
Components/FileSystem/: CMakeLists.txt
Components/FileSystem/include/Kokoro/: FileSystem.hh
Components/FileSystem/tests/: FileSystem.cc
Components/Memory/: CMakeLists.txt
Components/Memory/include/Kokoro/: Memory.hh
Components/Memory/include/Kokoro/Memory/: Buffer.hh  Span.hh
Components/Memory/tests/: Buffer.cc
Components/Utility/: CMakeLists.txt
Components/Utility/include/Kokoro/: Utility.hh
Components/Utility/include/Kokoro/Utility/: ArgParser.hh  BitFlags.hh  CRC32.hh
Components/Utility/tests/: ArgParser.cc
Components/fmt/: CMakeLists.txt
Components/fmt/include/Kokoro/: fmt.hh
Components/fmt/include/Kokoro/fmt/: core.h  format-inl.h  format.hh
Components/fmt/src/: format.cc  os.cc
